# icrs-investigation

./: .gitignore  README.md  dev.ipynb  index.html  pyproject.toml
css/: styles.css
data/: abstracts.json  delegates.json  delegates_layout.txt  geocode_overrides.json  national_per_capita_co2.json  programme.json
js/: app.js  emissions-data.js  emissions-view.js  map.js  network.js  share.js  utils.js
scripts/: estimate_travel_emissions.py  export_attendee_site.py  patch_locations_connections.mjs
src/: delegates.py  geocode.py  plot_utils.py  programme.py  travel_emissions.py
